# Triolinga

./: .gitignore  AGENTS.md  LOG.md  README.md  cleaned-chinese-beginner-course.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.pglite-data/: postmaster.pid
.pglite-data/global/: pg_control  pg_internal.init
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/fydor-exchange/: page.tsx
app/learning-science/: page.tsx
app/review/: page.tsx
components/: AppShell.tsx
components/admin-imports/: LanguageField.tsx  LessonImportsPage.tsx  lesson-import-utils.ts
components/imported-content/: AnnotatedSentence.tsx  FillBlankMode.tsx  ImportedContentStudy.tsx  ImportedContentWorkspace.tsx  InteractiveToken.tsx  MultipleChoiceMode.tsx  ProgressiveRevealControls.tsx  SentenceFlashcard.tsx  sessionProgress.ts  useImportedLessonBrowser.ts
components/language/: ImportHelpPanel.tsx  ImportPreview.tsx  InteractiveSentence.tsx
components/review/: AGENTS.md  ReviewDeck.tsx  (+3 more)
db/: schema.ts
docs/: annotated-sentence-highlight.md  audio-and-tooltips.md  code-map.md  codex-context-map.md  fydor-tutorial.md  lesson-import-system.md  review-system.md  study-tab-progress.md  tauri-build-and-launch-debugging-log.md
lib/: desktopApi.ts  fydor-pack.ts  useSpeech.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/frontend-dist/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  lessons.rs  main.rs  models.rs  review.rs
src-tauri/src/lessons/: mod.rs
test-pglite/: postmaster.pid
(+156 files in other folders)
